--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:largeScreens="true"
         android:xlargeScreens="true"
         android:anyDensity="true" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,5 +28,6 @@
             android:enabled="true" />
         <receiver android:name=".AlarmReceiver" />
     </application>
+
 
 </manifest>
