--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,16 @@
         <activity android:name=".Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".Alarm" />
-        <activity android:name=".AlarmQuestions"></activity>
+        <activity android:name=".AlarmQuestions" />
         <service
             android:name=".AlarmService"
             android:enabled="true" />
-        <receiver android:name=".AlarmReceiver" />
+        <receiver
+            android:name=".AlarmReceiver" />
     </application>
 
 
