--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Alarm" />
+        <activity
+            android:name=".Alarm"
+            android:parentActivityName=".Home" />
         <activity android:name=".AlarmQuestions" />
 
         <service
