--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,26 +21,23 @@
         <activity android:name=".Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Alarm"
+        <activity android:name=".Alarm"
             android:parentActivityName=".Home" />
         <activity android:name=".AlarmQuestions" />
 
-        <service
-            android:name=".AlarmService"
+        <service android:name=".AlarmService"
             android:enabled="true" />
 
         <receiver android:name=".AlarmReceiver" />
 
-        <activity
-            android:name=".AlarmDialog"
+        <activity android:name=".AlarmDialog"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_alarm_dialog"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:theme="@style/FullscreenTheme"
+            android:parentActivityName=".Home"/>
     </application>
 
 </manifest>
