--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //compile 'com.android.support:design:25.3.1'
+    // sugarrecord database support
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support:support-annotations:24.2.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:26.+'
-    //compile 'com.android.support:design:25.3.1'
-    compile 'com.github.satyan:sugar:1.3' // sugarrecord database support
+    compile 'com.github.satyan:sugar:1.3'
+    testCompile 'junit:junit:4.12'
 }
