--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,11 @@
             android:label="@string/title_activity_alarm_dialog"
             android:theme="@style/FullscreenTheme"
             android:parentActivityName=".Home"/>
+
+        <activity android:name=".fcpop"
+            android:theme="@style/AppTheme.popuptheme">
+        </activity>
+
     </application>
 
 </manifest>
