--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
             android:theme="@style/AppTheme.popuptheme">
         </activity>
 
+        <activity android:name=".Question"
+                  android:parentActivityName=".Home" />
+
     </application>
 
 </manifest>
