--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="csuchico.smartnap"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="csuchico.smartnap">
 
     <supports-screens
         android:anyDensity="true"
@@ -13,45 +13,61 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        tools:replace="android:icon"
+        android:name="com.orm.SugarApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="com.orm.SugarApp">
-
-        <meta-data android:name="DATABASE" android:value="smartNapDB.db" />
-        <meta-data android:name="VERSION" android:value="3" />
-        <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="csuchico.smartnap" />
+        tools:replace="android:icon">
+        <meta-data
+            android:name="DATABASE"
+            android:value="smartNapDB.db" />
+        <meta-data
+            android:name="VERSION"
+            android:value="3" />
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="true" />
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="csuchico.smartnap" />
 
         <activity android:name=".Home">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
         </activity>
-        <activity android:name=".AlarmEdit"
+        <activity
+            android:name=".AlarmEdit"
             android:parentActivityName=".Home" />
         <activity android:name=".AlarmQuestions" />
 
-        <service android:name=".AlarmService"
+        <service
+            android:name=".AlarmService"
             android:enabled="true" />
 
         <receiver android:name=".AlarmReceiver" />
 
-        <activity android:name=".AlarmDialog"
+        <activity
+            android:name=".AlarmDialog"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_alarm_dialog"
-            android:theme="@style/FullscreenTheme"
-            android:parentActivityName=".Home"/>
+            android:parentActivityName=".Home"
+            android:theme="@style/FullscreenTheme" />
+        <activity
+            android:name=".fcpop"
+            android:theme="@style/AppTheme.popuptheme"></activity>
+        <activity android:name=".SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <activity android:name=".fcpop"
-            android:theme="@style/AppTheme.popuptheme">
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
