--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
+        //added for importing NonNull
+        compile 'com.intellij:annotations:+@jar'
+        compile 'com.android.support:support-annotations:+'
     })
     //compile 'com.android.support:design:25.3.1'
     // sugarrecord database support
@@ -30,6 +33,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support:support-annotations:24.2.0'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.1'
     compile 'com.android.support:design:26.+'
     compile 'com.github.satyan:sugar:1.3'
     testCompile 'junit:junit:4.12'
